kubernetes-manifests/base/hello-deployment.yaml
# This Deployment manifest defines:
# - single-replica deployment of the container image, with label "app: go-hello-world"
# - Pod exposes port 8080
# - specify PORT environment variable to the container process
# Syntax reference https://kubernetes.io/docs/concepts/configuration/overview/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-hello-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-hello-demo
  template:
    metadata:
      labels:
        app: go-hello-demo
    spec:
      containers:
      - name: server
        image: asia-east1-docker.pkg.dev/shawn-demo-2022/image-repos/hello-demo
        resources:
          requests:
            memory: 200Mi
            cpu: 200m
          limits:
            memory: 250Mi
            cpu: 250m
        ports:
        - containerPort: 8080
        livenessProbe:
          tcpSocket:
            port: 8080
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
