kubernetes-manifests/base/hello-service.yaml
# This Service manifest defines:
# - a load balancer for pods matching label "app: go-hello-world"
# - exposing the application to the public Internet (type:LoadBalancer)
# - routes port 80 of the load balancer to the port 8080 of the Pods.
# Syntax reference https://kubernetes.io/docs/concepts/configuration/overview/
apiVersion: v1
kind: Service
metadata:
  name: go-hello-demo-external
spec:
  type: LoadBalancer
  selector:
    app: go-hello-demo
  ports:
  - name: http
    port: 80
    targetPort: 8080
