kubernetes-manifests/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: http-server
spec:
  podSelector:
    matchLabels:
      app: go-hello-demo
  policyTypes:
    - Ingress
    - Egress
  ingress: 
  - ports: 
    - port: 8080
  egress:
  - {}
